--- a/snatchsolutions/public/login.html
+++ b/snatchsolutions/public/login.html
@@ -38,7 +38,7 @@
           <small class="text-muted" id="welcome_language"> </small>
           <!-- API will go here : https://www.greetingsapi.com/ -->
         </div>
-        <div>
+        <div id="loginControls">
         <form class="mar-form p-2">
           <div class="form-group">
             <label for="InputEmail">Email address</label>
@@ -49,19 +49,34 @@
             <label for="InputPassword">Password</label>
             <input type="password" class="form-control" id="InputPassword" placeholder="Password">
           </div>
-          <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="InputCheck">
-            <label class="form-check-label" for="InputCheck">Remember Me</label>
-          </div>
           <br>
-          <button class="btn btn-primary" type="button" onclick=login()>Sign In</button>
+          <button class="btn btn-primary" type="button" onclick="loginUser()">Sign In</button>
+          <button class="btn btn-primary" type="button" onclick="createUser()">Create Account</button>
         </form>
       </div>
+
+      <div id="logoutControls" style="display: none">
+        <div id="playerName"></div>
+        <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
       </div>
+      </div>
+
+    <!-- Error dialog -->
+    <div class="modal fade" id="msgModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content text-dark">
+          <div class="modal-body">error message here</div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
     </main>
 
     <footer class="d-flex bg-dark p-3 justify-content-between">
       <span class="footer-content">Author: Chase Bledsoe</span>
+      <span class="footer-content" id="loginWebsocket"></span>
       <a class ="footer-content" href="https://github.com/Chaser2143/SnatchSolutions">
         <img src="assets/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
       </a>
