--- a/snatchsolutions/public/quickExpense.html
+++ b/snatchsolutions/public/quickExpense.html
@@ -94,6 +94,7 @@
 
     <footer class="d-flex bg-dark p-3 justify-content-between">
       <span class="footer-content">Author: Chase Bledsoe</span>
+      <span class="footer-content" id="loginWebsocket"></span>
       <a class ="footer-content" href="https://github.com/Chaser2143/SnatchSolutions">
         <img src="assets/github-mark-white.svg" alt="Github Social Logo" height="24px" width="24px">
       </a>
