--- a/snatchsolutions/public/login.html
+++ b/snatchsolutions/public/login.html
@@ -6,8 +6,6 @@
     <title>Snatch Bank</title>
     <link rel="icon" href="assets/snake.ico" />
     <link rel="stylesheet" href="main.css" />
-    <script src="main.js"></script>
-    <script src="login.js"></script>  
   </head>
   <body onload="fillHeader()">
 
@@ -38,7 +36,7 @@
           <small class="text-muted" id="welcome_language"> </small>
           <!-- API will go here : https://www.greetingsapi.com/ -->
         </div>
-        <div id="loginControls">
+        <div id="loginControls" style="display: none">
         <form class="mar-form p-2">
           <div class="form-group">
             <label for="InputEmail">Email address</label>
@@ -56,8 +54,7 @@
       </div>
 
       <div id="logoutControls" style="display: none">
-        <div id="playerName"></div>
-        <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
+        <button type="button" class="btn btn-secondary btn-lg" onclick="logout()">Logout</button>
       </div>
       </div>
 
@@ -82,6 +79,8 @@
       </a>
     </footer>
 
+    <script src="main.js"></script>
+    <script src="login.js"></script>  
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
