--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="expansion" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/snake.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      .expansion{
+        display:flex;
+        flex-direction: column;
+        height: 100%;
+      }
+    </style>
 
     <title>Snatch Bank</title>
   </head>
-  <body>
+  <body class="expansion">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="expansion" id="root"></div>
     <script type="module" src="/index.jsx"></script>
   </body>
 </html>
